@@ -7,6 +7,7 @@ For a detailed list of changes, please see ChangeLog.
 
  * Bug fixes:
    - Fix some translation mistakes in the fr help file (LP: #1210552)
+   - Fix crash when changing the show secrets setting
 
 0.27 (2013-08-12)
 
